--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Home
         <p>
             I'm Jonas and this is my website, it's a space of my own to highlight my projects and share some of the things I've learned.
             <br /><br />
-            I have a generally broad interest in the field of technology and have a tendency to dabble in this and that.
-            Particularly I've found an interest in the areas of self-hosting, cybersecurity and OSINT.
-            I also have a secondary interest in medical technology and giving new life to old hardware.
+            I have a generally broad interest in the field of technology and tend to dabble in this and that.
+            Some areas I've found particularily interesting are self-hosting, cybersecurity, OSINT and medical techonology.
+            I also repair and refurbish old hardware.
             <br /><br />
             Once a month I write a piece about one my areas of interest. You can find all of my authored posts in the <a href="/blog/">Blog</a> section.
             If you have questions or wish to get in touch, see the <a href="/contact/">Contact</a> section.
