Updates, new blog post

--- a/copyright.html
+++ b/copyright.html
@@ -7,14 +7,14 @@ permalink: /copyright/
   
 <div class="content-box">
     <p>
-        Images, with the exception of the website favicon, is subject to <b>All Rights Reserved</b>.
+        Images, with the exception of those from external resources and assets, is subject to <b>All Rights Reserved</b>.
         <br /><br />
         The text contents of the <a href="/">Home</a> page is subject to <b>All Rights Reserved</b>.
         <br /><br />
         The text contents of posts, which can be found listed on the <a href="/blog/">Blog</a> page,
         is subject to the <a href="https://mit-license.org/">MIT license</a>.
         <br /><br />
-        The following external resources and assets are used in this website and are subject to their own license agreements:
+        The following external resources and assets are used on this website and are subject to their own license agreements:
         <ul>
             <li>The website body text font is <a href="https://fonts.google.com/specimen/Montserrat/about">Montserrat</a>, which is licensed under the <a href="https://opensource.org/license/ofl-1-1/">Open Font License</a>.</li>
             <li>The website monospace font is <a href="https://github.com/JetBrains/JetBrainsMono">JetBrains Mono</a>, which is licensed under the <a href="https://github.com/JetBrains/JetBrainsMono/blob/master/OFL.txt">Open Font License</a>.</li>
