--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@ title: Home
 
 <div class="content-box">
     <div class="hybrid-content">
-        <img width="250" src="assets/images/profile.jpg" alt="A profile picture of a man wearing glasses, a black sweatshirt and a black fisherman's beanie." class="profile_picture">
+        <img width="250" src="/assets/media/profile.jpg" alt="A profile picture of a man wearing glasses, a black sweatshirt and a black fisherman's beanie." class="profile_picture">
         <p>
-            I'm Jonas and this is my website, it's a space of my own to highlight my projects and share some of the things I've learned.
+            I'm Jonas and this is my website, it's a space of my own to highlight my projects and share some of the things I learn.
             <br /><br />
-            I have a generally broad interest in the field of technology and tend to dabble in this and that.
-            Some areas I've found particularily interesting are self-hosting, cybersecurity, OSINT and medical techonology.
-            I also repair and refurbish old hardware.
+            I have a broad interests in technology and tend to dabble in this and that.
+            Some areas I've found particularily interesting are self-hosting, cybersecurity and medical techonology.
+            I also repair and repurpose old hardware.
             <br /><br />
-            Once a month I write a piece about one my areas of interest. You can find all of my authored posts in the <a href="/blog/">Blog</a> section.
+            Every now and then I write a piece about one my areas of interest. You can find all of my authored posts in the <a href="/blog/">Blog</a> section.
             If you have questions or wish to get in touch, see the <a href="/contact/">Contact</a> section.
         </p>
     </div>
